--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset = "UTF-8">
         <title>Four in a Row with Treehouse</title>
         <link href="https://fonts.googleapis.com/css?family=Wendy+One" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="src/css/style.css" />
     </head>
 
     <body>
@@ -99,9 +99,9 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<script src="js/classes/Game.js"></script>
-<script src="js/classes/Board.js"></script>
-<script src="js/classes/Space.js"></script>
-<script src="js/classes/Player.js"></script>
-<script src="js/classes/Token.js"></script>
-<script src="js/app.js"></script>
+<script src="src/js/classes/Game.js"></script>
+<script src="src/js/classes/Board.js"></script>
+<script src="src/js/classes/Space.js"></script>
+<script src="src/js/classes/Player.js"></script>
+<script src="src/js/classes/Token.js"></script>
+<script src="src/js/app.js"></script>
