--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 			Start Game Button
 			When a player clicks this button, the game will begin
 		-->
-    	<button id = "begin-game">
-    		Start
+    	<button id="begin-two-player">
+    		Two Player
     	</button>
 
+        <button id="begin-single-player">
+    		Single Player
+    	</button>
 
 		<!--
 			#game-scene: container for entire play area
