Some minor changes, complete readme

--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
 			Start Game Button
 			When a player clicks this button, the game will begin
 		-->
-    	<button id="begin-two-player">
-    		Two Player
+    	<button id="begin-game">
+    		Start
     	</button>
 
-        <button id="begin-single-player">
-    		Single Player
-    	</button>
 
 		<!--
 			#game-scene: container for entire play area
@@ -106,5 +103,6 @@
 <script src="src/classes/Board.js"></script>
 <script src="src/classes/Space.js"></script>
 <script src="src/classes/Player.js"></script>
+<script src="src/classes/Computer.js"></script>
 <script src="src/classes/Token.js"></script>
 <script src="src/app.js"></script>
