--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!--
+App appears not to work correctly when doctype is specified
+-->
 <html>
     <head>
-        <meta charset = "UTF-8">
+        <meta charset="UTF-8">
         <title>Four in a Row with Treehouse</title>
         <link href="https://fonts.googleapis.com/css?family=Wendy+One" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="src/css/style.css" />
@@ -102,9 +105,9 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<script src="src/js/classes/Game.js"></script>
-<script src="src/js/classes/Board.js"></script>
-<script src="src/js/classes/Space.js"></script>
-<script src="src/js/classes/Player.js"></script>
-<script src="src/js/classes/Token.js"></script>
-<script src="src/js/app.js"></script>
+<script src="src/classes/Game.js"></script>
+<script src="src/classes/Board.js"></script>
+<script src="src/classes/Space.js"></script>
+<script src="src/classes/Player.js"></script>
+<script src="src/classes/Token.js"></script>
+<script src="src/app.js"></script>
