--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 App appears not to work correctly when doctype is specified
 -->
 <html>
+    <head>
         <meta charset="UTF-8">
         <title>Four in a Row with Treehouse</title>
         <link href="https://fonts.googleapis.com/css?family=Wendy+One" rel="stylesheet">
